added font and basic structure for library display
simple div added for book display, and a title bar for the table added

--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
         <title>Library</title>
         <meta name="Andrew Nguyen" content="">
         <link href="styles.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        <h1>Library<h1>
+        <h1>Library</h1>
+        <div id="book-display">
+            <div id="book-attribute-headings">
+                <p class="book-attribute-name">Name</p>
+                <p class="book-attribute-name">Author</p>
+                <p class="book-attribute-name">Publish Date</p>
+                <p class="book-attribute-name">Number of Pages</p>
+                <p class="book-attribute-name">Read</p>
+            </div>
+        </div>
+
+        <div id="new-book">
+            <button type="button">New Book</button>
+        </div>
 
         <script src="library.js"></script>
     </body>
