added submit and cancel form buttons,  appropriate js logic for that, as well as some mroe styling

--- a/index.html
+++ b/index.html
@@ -25,9 +25,8 @@
         </div>
 
         <div id="new-book-popup">
+            <h1>New Book</h1>
             <form id="new-book-form">
-                <h1>New Book</h1>
-
                 <label for="name">
                     <input type="text" id="name" placeholder="Name" name="name" required>
                 </label>
@@ -41,8 +40,11 @@
                 </label>
 
                 <label for="pages">
-                    <input type="number" id="pages" placegolder="Number of pages" name="pages" required>
+                    <input type="number" id="pages" placeholder="Number of pages" name="pages" required>
                 </label>
+
+                <button type="submit">Log new book</button>
+                <button id="cancel-new-book">Cancel</button>
             </form>
         </div>
         <script src="library.js"></script>
