implemented new book logic in js
changed the form to a div and just created an onclick event function to get the input values and add the book to the library.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
         <div id="new-book-popup">
             <h1>New Book</h1>
-            <form id="new-book-form">
+            <div id="new-book-form">
                 <label for="name">
                     <input type="text" id="name" placeholder="Name" name="name" required>
                 </label>
@@ -43,9 +43,9 @@
                     <input type="number" id="pages" placeholder="Number of pages" name="pages" required>
                 </label>
 
-                <button type="submit">Log new book</button>
+                <button id="submit">Log new book</button>
                 <button id="cancel-new-book">Cancel</button>
-            </form>
+            </div>
         </div>
         <script src="library.js"></script>
     </body>
